--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8513,3 +8513,21 @@ footer .slogon {
   font-weight: bold;
 }
 
+/* forms */
+
+input,
+textarea,
+select,
+.uneditable-input {
+  border: 1px solid #bbb;
+  margin-bottom: 15px;
+}
+
+input {
+  height: auto !important;
+}
+
+.panel {
+  margin-top: 50px;
+}
+
